@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-09-05T01:06:14Z",
+  "timestamp" : "2024-09-06T01:06:09Z",
   "count_outdated" : 461,
   "uniques_outdated" : 113,
-  "count" : 463,
-  "uniques" : 114,
+  "count" : 469,
+  "uniques" : 117,
   "views" : [
     {
       "timestamp": "2024-09-04T00:00:00Z",
@@ -13,6 +13,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-09-05T00:00:00Z",
+      "count": 6,
+      "count_minmax": [ 6, 6 ],
+      "count_decinc": [ 0, 6 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
