@@ -1,11 +1,16 @@
 {
-  "count": 2,
-  "uniques": 1,
+  "count": 8,
+  "uniques": 4,
   "views": [
     {
       "timestamp": "2024-09-04T00:00:00Z",
       "count": 2,
       "uniques": 1
+    },
+    {
+      "timestamp": "2024-09-05T00:00:00Z",
+      "count": 6,
+      "uniques": 3
     }
   ]
 }
