@@ -1,3 +1,12 @@
+2024-09-06T01:06:09Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10730622248 # 410
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-06
+* notice: last 14d: unq all: 4 8
+* notice: prev accum: outdated-unq outdated-all / unq all: 113 461 / 114 463
+* notice: next accum: outdated-unq outdated-all / unq all: 113 461 / 117 469
+* notice: prev exec diff / last date diff / accum: unq all: +3 +6 -0 -0 / +3 +6 -0 -0 / 3 6
+* notice: removed / changed dates: [] / [2024-09-05]
+
 2024-09-05T01:06:14Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10712008851 # 409
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-05
